Solved the issue for phone field API Name and written test class for broadcast which covers all the apex class and trigger as well as handler

--- a/force-app/main/default/lwc/wbAllBroadcastPage/wbAllBroadcastPage.css
+++ b/force-app/main/default/lwc/wbAllBroadcastPage/wbAllBroadcastPage.css
@@ -18,7 +18,7 @@
 }
 
 .container {
-    height: 75%;
+    height: calc(100% - 10rem);
     overflow: scroll;
 }
 
@@ -152,6 +152,11 @@
 .table thead{
     position: sticky;
     top: 0;
+}
+
+.table-name{
+    cursor: pointer;
+    color: #0082c7 !important;
 }
 
 .table th {
